--- a/Group_FeatureSubset.yml
+++ b/Group_FeatureSubset.yml
@@ -23,4 +23,4 @@ workflow:
   - group:
     - funcname: AllFeatureSubgroups
       functype: parts
-      methodname: 2)DendrogramSubgroupsSelection
+      methodname: DendrogramSubgroupsSelection
