--- a/TargetValuePrediction_Parts.yml
+++ b/TargetValuePrediction_Parts.yml
@@ -1,5 +1,6 @@
 link: 
-  - nodename: getModelHamiltonian
+  - nodename: get_ModelHamiltonian
+    nodetype: function
     linktype: "PartOf"
     link:
      - nodename: ModelHamiltonianType
