--- a/TargetValuePrediction_Top.yml
+++ b/TargetValuePrediction_Top.yml
@@ -1,11 +1,12 @@
-link:
-  - nodename: getTargetValue
-    nodetype: function
-    linktype: FunctionFirst
-    link:
-      - nodename: Hamiltinian
-        nodetype: parts
-      - nodename: Solver
-        nodetype: method
-      - nodename: PredictTargetValue
-        nodetype: function
+workflow:
+- groupname: dummy
+  workflow:
+  - group:
+    - funcname: ModelHamiltonian
+      functype: parts
+    - funcname: Solver
+      functype: parts
+  - group:
+    - funcname: PredictedTargetValue
+      functype: parts
+      methodname: PredictedTargetValue
