--- a/Importance_MakeScores.yml
+++ b/Importance_MakeScores.yml
@@ -5,41 +5,43 @@ workflow:
     - funcname: AllModels
       functype: parts
       methodname: generateAllModels
+      methodtype: function
   - group:
     - funcname: BestScoreOfAll
       functype: parts
       methodname: generateBestOfAllModels
+      methodtype: function
 - groupname: deleteGroup
   workflow:
   - group:
-    - funcname: Group
-      functype: parts
-      methodname: GenerateGroup
     - funcname: AllModels
       functype: parts
       methodname: generateAllModels
+      methodtype: function
+    - funcname: Group
+      functype: parts
+      methodname: GenerateGroup
+      methodtype: function
   - group:
     - funcname: AllModelsExceptGroup
       functype: parts
-      methodname: 2)DeleteGroupFromAllModels
+      methodname: DeleteGroupFromAllModels
+      methodtype: function
 - groupname: deleteGroupAddSubgroup
   workflow:
   - group:
-    - funcname: AllModels
+    - funcname: AllModelsExceptGroup
       functype: parts
-      methodname: generateAllModels
-  - group:
-    - funcname: Group
-      functype: parts
-      methodname: GenerateGroup
-  - group:
+      methodname: DeleteGroupFromAllModels
+      methodtype: function
     - funcname: Subgroup
       functype: parts
       methodname: GenerateSubgroupFromGroup
-    - funcname: AllModelsExceptGroup
-      functype: parts
-      methodname: 2)DeleteGroupFromAllModels
+      methodtype: function
   - group:
     - funcname: AllModelsExceptGroupWithSubgroup
       functype: parts
-      methodname: 2)AddSubgroup
+      methodname: AddSubgroup
+      methodtype: function
+
+
