--- a/AtomCrystTarget_misc.yml
+++ b/AtomCrystTarget_misc.yml
@@ -4,6 +4,8 @@ workflow:
   - group:
     - funcname: AtomDescriptor
       functype: parts
+      methodname: generateAtomDescriptor
+      methodtype: function
   - group:
     - funcname: CrystDescriptor
       functype: parts
@@ -14,6 +16,8 @@ workflow:
   - group:
     - funcname: AtomDescriptor
       functype: parts
+      methodname: generateAtomDescriptor
+      methodtype: function
   - group:
     - funcname: CrystDescriptor
       functype: parts
@@ -24,6 +28,8 @@ workflow:
   - group:
     - funcname: AtomDescriptor
       functype: parts
+      methodname: generateAtomDescriptor
+      methodtype: function
   - group:
     - funcname: CrystDescriptor
       functype: parts
@@ -34,6 +40,9 @@ workflow:
   - group:
     - funcname: AtomDescriptor
       functype: parts
+      methodname: generateAtomDescriptor
+      methodtype: function
+
   - group:
     - funcname: CrystDescriptor
       functype: parts
@@ -44,6 +53,9 @@ workflow:
   - group:
     - funcname: AtomDescriptor
       functype: parts
+      methodname: generateAtomDescriptor
+      methodtype: function
+
   - group:
     - funcname: CrystDescriptor
       functype: parts
@@ -54,6 +66,9 @@ workflow:
   - group:
     - funcname: AtomDescriptor
       functype: parts
+      methodname: generateAtomDescriptor
+      methodtype: function
+
   - group:
     - funcname: CrystDescriptor
       functype: parts
