--- a/AtomCrystTarget_top.yml
+++ b/AtomCrystTarget_top.yml
@@ -15,6 +15,7 @@ workflow:
     - funcname: AtomDescriptor
       functype: parts
       methodname: generateAtomDescriptor
+      methodtype: function
   - group:
     - funcname: CrystDescriptor
       functype: parts
