--- a/TargetValuePrediction_Top.yml
+++ b/TargetValuePrediction_Top.yml
@@ -10,3 +10,4 @@ workflow:
     - funcname: PredictedTargetValue
       functype: parts
       methodname: PredictedTargetValue
+      methodtype: parts
