--- a/AtomicProperty.yml
+++ b/AtomicProperty.yml
@@ -1,23 +1,29 @@
 link:
   - nodename: AtomProperty
+    nodetype: parts
     linktype: IsA
     link: 
       - nodename: PeriodicTableAtomProperty
+        nodetype: parts
         linktype: IsA
         link:
         - nodename: Z
         - nodename: mass 
       - nodename: IsolatedThoreticalAtomProperty
+        nodetype: parts
         linktype: IsA
         link: 
         - nodename: EigenEnergyProperty
+          nodetype: parts
           linktype: IsA
           link: 
            - nodename: AllChannelEigenEnergyProperty
+             nodetype: parts
              linktype: IsA
              link:
                - nodename: Etot
            - nodename: ChannelDecomposedEigenEnergyProperty
+             nodetype: parts
              linktype: IsA
              link:
                - nodename: Es
@@ -25,13 +31,16 @@ link:
                - nodename: Ed
                - nodename: Ef
         - nodename: TheoreticalLengthProperty
+          nodetype: parts
           linktype: IsA
           link: 
             - nodename: AllChannelThereticalLengthProperty
+              nodetype: parts
               linktype: IsA
               link:
                 - nodename: r2
             - nodename: ChannelDecomposedThereticalLengthProperty 
+              nodetype: parts
               linktype: IsA
               link:
                 - nodename: r2s
@@ -39,15 +48,18 @@ link:
                 - nodename: r2d
                 - nodename: r2f
         - nodename: ValenceQuantumNumber
+          nodetype: parts
           linktype: IsA
           link:
             - nodename: ValenceQuantumNumber3d
+              nodetype: parts
               linktype: IsA
               link:
                 - nodename: S3d
                 - nodename: L3d
                 - nodename: J3d
             - nodename: ValenceQuantumNumber4f
+              nodetype: parts
               linktype: IsA
               link:
                 - nodename: DirectValenceQuantumNumber4f
@@ -63,15 +75,18 @@ link:
                     - nodename: J4f(gJ-1)
                     - nodename: J4f(2-gJ)
       - nodename: ExperimentalPrepresentativeProperty
+        nodetype: parts
         linktype: IsA
         link:
           - nodename: ExperimentalLengthProperty
+            nodetype: parts
             linktype: IsA
             link:
               - nodename: AtomicRadius
               - nodename: AtomicCovalentRadius
               - nodename: AtomicVdWRadius
           - nodename: ExperimentalEnergyProperty
+            nodetype: parts
             linktype: IsA
             link:
               - nodename: IonizationPotential
