--- a/Importance_ExhaustiveSearchDOS.yml
+++ b/Importance_ExhaustiveSearchDOS.yml
@@ -5,23 +5,29 @@ workflow:
     - funcname: AllModelsExceptGroup
       functype: parts
       methodname: ChooseAllModelsExceptGroup
+      methodtype: function
     - funcname: AllModels
       functype: parts
       methodname: generateAllModels
+      methodtype: function
   - group:
     - funcname: VisualizedImportance
       functype: parts
       methodname: VisualizeStrongRelevanceDOS
+      methodtype: function
 - groupname: weakDOS
   workflow:
   - group:
     - funcname: AllModelsExceptGroupWithSubgroup
       functype: parts
-      methodname: ChoseAllModelsExceptGroupWithSubgroup
+      methodname: ChooseAllModelsExceptGroupWithSubgroup
+      methodtype: function
     - funcname: AllModelsExceptGroup
       functype: parts
       methodname: ChooseAllModelsExceptGroup
+      methodtype: function
   - group:
     - funcname: VisualizedImportance
       functype: parts
-      methodname: VisualiWeakRelevanceDOS
+      methodname: VisualizeWeakRelevanceDOS
+      methodtype: function
