new sample/AtomicCoordinate2Descriptor_*.yml modify sample/MaterialsList_CrystalCandidates.yml for role

--- a/sample/MaterialsList_CrystalCandidates.yml
+++ b/sample/MaterialsList_CrystalCandidates.yml
@@ -9,6 +9,8 @@ workflow:
         methodtype: method
         funcname: CrystalCandidates
         functype: parts
+        funcgeneralname: Crystal
+        funcgeneraltype: parts
 
 - groupname: random generation
   workflow:
@@ -20,6 +22,8 @@ workflow:
         methodtype: function
         funcname: CrystalCandidates
         functype: parts
+        funcgeneralname: Crystal
+        funcgeneraltype: parts
 
 - groupname: mateirals knowledge
   workflow:
